2015-04-14  Norbert Preining  <norbert@preining.info>

	* mktexlsr (treefile): switch back to hard-coded path, as
	indeed it seems there are several systems without support for
	mktemp --tmpdir, just mktemp. TL2015 pretest emails.

2015-04-12  Karl Berry  <karl@tug.org>

	* texmf.cnf: update for TL'15.
	(shell_escape_commands): include extractbb, fingers crossed.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac: 6.2.1 (without the dev) for 2015 pretest.

2015-03-25  Karl Berry  <karl@tug.org>

	* mktexlsr (treefile): use shell mktemp; patch from Debian
	via tlbuild mail from Norbert, 6 Mar 2015 09:13:06.
	Per Nelson Beebe, the program is available on a wide variety of
	systems nowadays, excluding only SGI IRIX MIPS, which we have
	not built binaries for in several years.
	(tlbuild reply, 6 Mar 2015 06:22:21)

2015-03-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, kpathsea.pc.in: Install <kpathsea/c-auto.h> under
	${libdir}.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop checks for strcasecmp, strtol, and strstr.
	* lib.h: Drop the strstr() prototype.
	* Makefile.am: No need to distribute the replacement functions.

2014-12-13  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmf.cnf: Sync with master which is changed by Norbert.

2014-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am [kpathsea.h]: Improved output for silent rules.

2014-12-05  Karl Berry  <karl@tug.org>

	* kpsewhich.c (help_formats): new fn for new option --help-formats.
	(help_message): split off code from here.
	(USAGE): document it.
	(read_command_line): recognize it.
	Suggestion from Julian Gilbey, tex-k 4 Dec 2014 13:34:23.

2014-10-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* db.c (db_names): Use initialized non-const strings to avoid warning.

2014-10-19  Karl Berry  <karl@tug.org>

	* db.c (db_names): list DB_NAME_LC first, and list both always,
	dropping WIN32 conditional.